restores html visibility after CSS is preloaded (app/views/layouts/cascade-assets.xml.erb). Prevents flash of unstyled content

--- a/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v1/modules/omni-nav.scss
@@ -1079,3 +1079,9 @@ table.gssb_c {
     }
   }
 }
+
+// Prevents flash of unstyled content (caused by cascade-assets.xml.erb... for Google Lighthouse mobile performance reasons...)
+html {
+  visibility: visible;
+  opacity: 1;
+}
